--- a/react/calculadora/src/main/Calculator.css
+++ b/react/calculadora/src/main/Calculator.css
@@ -1,7 +1,9 @@
 .calculator {
   width: 320px;
-  height: 235px;
+  height: 335px;
   border-radius: 5px;
   overflow: hidden;
-  background: red;
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+  grid-template-rows: 1fr 48px 48px 48px 48px 48px;
 }
